--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,16 @@
+# Netlify configuration file
 [build]
-  functions = "functions"
   publish = "."
+  functions = "functions"
 
+# Redirect API requests to Netlify Functions
 [[redirects]]
   from = "/api/*"
   to = "/.netlify/functions/:splat"
+  status = 200
+
+# Handle SPA routing
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
   status = 200
